log
Tue 11 Jun 2024 10:49:31 PM UTC: 
 sudoku.c | 46 +++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 45 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:11: error: variable ‘row’ set but not used [-Werror=unused-but-set-variable]
   49 |       int row[10] = {0};
      |           ^~~
sudoku.c: In function ‘DFS’:
sudoku.c:103:13: error: unused variable ‘current’ [-Werror=unused-variable]
  103 |       Node* current = (Node*)top(s);
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a9005d5
Tue 11 Jun 2024 10:50:47 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:11: error: variable ‘row’ set but not used [-Werror=unused-but-set-variable]
   49 |       int row[10] = {0};
      |           ^~~
cc1: all warnings being treated as errors
Compilation failed
f180b05
Tue 11 Jun 2024 10:53:51 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|2
total_score: 50/70
42a4657
Tue 11 Jun 2024 10:55:38 PM UTC: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  8|1
total_score: 60/70
d920bbc
Tue 11 Jun 2024 10:56:36 PM UTC: 
 sudoku.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:117:13: error: implicit declaration of function ‘freeStack’; did you mean ‘createStack’? [-Werror=implicit-function-declaration]
  117 |             freeStack(s);  // Liberamos el stack antes de retornar
      |             ^~~~~~~~~
      |             createStack
cc1: all warnings being treated as errors
Compilation failed
ba56989
Tue 11 Jun 2024 10:56:53 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  8|1
total_score: 60/70
a3c6d3e
Tue 11 Jun 2024 10:58:49 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  8|1
total_score: 60/70
ee65772
Tue 11 Jun 2024 10:59:49 PM UTC: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  8|1
total_score: 60/70
a1c37bc
Tue 11 Jun 2024 11:00:32 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:121:16: error: ‘adj_node’ undeclared (first use in this function); did you mean ‘adj_nodes’?
  121 |         while (adj_node != NULL) {
      |                ^~~~~~~~
      |                adj_nodes
sudoku.c:121:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b831d73
Tue 11 Jun 2024 11:00:42 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d5ef457
Tue 11 Jun 2024 11:01:13 PM UTC: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  8|1
total_score: 60/70
decf95f
Tue 11 Jun 2024 11:02:40 PM UTC: 
 sudoku.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  7|2
total_score: 50/70
45208a0
Tue 11 Jun 2024 11:03:07 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c:86:5: error: expected identifier or ‘(’ before ‘return’
   86 |     return list;
      |     ^~~~~~
sudoku.c:87:1: error: expected identifier or ‘(’ before ‘}’ token
   87 | }
      | ^
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:84:5: error: control reaches end of non-void function [-Werror=return-type]
   84 |     }
      |     ^
cc1: all warnings being treated as errors
Compilation failed
6f23dab
Tue 11 Jun 2024 11:03:17 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
29cb4f2
Tue 11 Jun 2024 11:03:53 PM UTC: 
 sudoku.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  8|1
total_score: 60/70
690b77e
Tue 11 Jun 2024 11:06:14 PM UTC: 
 sudoku.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  8|1
total_score: 60/70
fc8fac9
